Version 6.0 alpha: (10 Jul 2004)
	* rss.pl:
	   - Settings are now in config.ini instead of hard coded in the
	     script. Finally.
	* info.pl:
	   - We now honor snooze, the info plugin shouldn't learn or respond
	     when SimBot is snoozing unless addressed.

Version 6.0 alpha: (09 Jul 2004)
	* simbot.pl:
	   - Added a means to override standard IRC commands like kick, op,
	     and voice with alternate functions.  This means that calling
	     SimBot::send_kick can be made to ask your network's ChanServ to
	     do it through a plugin.
	* plugins/services.undernet.pl:
	   - Added support for the kick command, but some error checking will
	     need to be added along with overrides for other IRC functions.

Version 6.0 alpha: (04 Jul 2004)
	* simbot.pl:
	   - Added snooze mode which can be toggled by users in the channel.
	     If a conversation is bizarre or private and users want to prevent
	     the bot from learning what is said and responding conversationally
	     this mode will prevent both temporarily.  It resets to off when
	     the bot starts up, and the command %snooze [off|on] toggles it.
	     $SimBot::snooze is available as a boolean to any plugins that want
	     to check whether snooze is on before generating an action.

Version 6.0 alpha: (26 Apr 2004)
	* simbot.pl:
	   - Added a new event handler that allows plugins to identify when
	     the bot is addressed and do something else.  Returning false
	     lets the plugin stop the normal output addressing creates.
	   - Plugins can now define hashes, which effectively allows them to
	     pass back arbitrary objects and associate them with a hash entry
	     for their specific plugin id.  Some other plugin (or the core)
	     could then use such hash tables to get information from a plugin.
	   - We try to ignore bits of leading text that appear to come from
	     logs now.  This should reduce the amount of junk that gets added
	     to the database.
	* plugins/nlp.pl: